--- a/Project_3_data_engineering.ipynb
+++ b/Project_3_data_engineering.ipynb
@@ -1408,7 +1408,272 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
+   "id": "3db88431",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Aircraft Type</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Type_of_Travellers</th>\n",
+       "      <th>Seat_Types</th>\n",
+       "      <th>Seat Comfort</th>\n",
+       "      <th>Cabin Staff Service</th>\n",
+       "      <th>Ground Service</th>\n",
+       "      <th>Food &amp; Beverages</th>\n",
+       "      <th>Wifi &amp; Connectivity</th>\n",
+       "      <th>Inflight Entertainment</th>\n",
+       "      <th>Value For Money</th>\n",
+       "      <th>Recommended</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>A320</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>Couple Leisure</td>\n",
+       "      <td>Economy Class</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Boeing 777-200</td>\n",
+       "      <td>Iceland</td>\n",
+       "      <td>Couple Leisure</td>\n",
+       "      <td>Business Class</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>A320</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>Solo Leisure</td>\n",
+       "      <td>Business Class</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>A380</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>Family Leisure</td>\n",
+       "      <td>Business Class</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>A380 / A320</td>\n",
+       "      <td>Poland</td>\n",
+       "      <td>Business</td>\n",
+       "      <td>Economy Class</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2830</th>\n",
+       "      <td>Boeing 747-400</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Couple Leisure</td>\n",
+       "      <td>Premium Economy</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2838</th>\n",
+       "      <td>A318</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>Solo Leisure</td>\n",
+       "      <td>Business Class</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2840</th>\n",
+       "      <td>Boeing 777</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>Family Leisure</td>\n",
+       "      <td>Economy Class</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2848</th>\n",
+       "      <td>A380</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>Solo Leisure</td>\n",
+       "      <td>Economy Class</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2876</th>\n",
+       "      <td>A321</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>Business</td>\n",
+       "      <td>Business Class</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>321 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Aircraft Type         Country Type_of_Travellers       Seat_Types  \\\n",
+       "14              A320         Germany     Couple Leisure    Economy Class   \n",
+       "17    Boeing 777-200         Iceland     Couple Leisure   Business Class   \n",
+       "23              A320  United Kingdom       Solo Leisure   Business Class   \n",
+       "34              A380  United Kingdom     Family Leisure   Business Class   \n",
+       "39       A380 / A320          Poland           Business    Economy Class   \n",
+       "...              ...             ...                ...              ...   \n",
+       "2830  Boeing 747-400   United States     Couple Leisure  Premium Economy   \n",
+       "2838            A318  United Kingdom       Solo Leisure   Business Class   \n",
+       "2840      Boeing 777  United Kingdom     Family Leisure    Economy Class   \n",
+       "2848            A380  United Kingdom       Solo Leisure    Economy Class   \n",
+       "2876            A321  United Kingdom           Business   Business Class   \n",
+       "\n",
+       "      Seat Comfort  Cabin Staff Service  Ground Service  Food & Beverages  \\\n",
+       "14             1.0                  3.0             1.0               1.0   \n",
+       "17             4.0                  3.0             4.0               3.0   \n",
+       "23             1.0                  1.0             1.0               1.0   \n",
+       "34             4.0                  5.0             4.0               5.0   \n",
+       "39             3.0                  5.0             1.0               4.0   \n",
+       "...            ...                  ...             ...               ...   \n",
+       "2830           4.0                  5.0             3.0               4.0   \n",
+       "2838           5.0                  5.0             5.0               5.0   \n",
+       "2840           1.0                  2.0             1.0               1.0   \n",
+       "2848           4.0                  5.0             4.0               3.0   \n",
+       "2876           1.0                  3.0             3.0               2.0   \n",
+       "\n",
+       "      Wifi & Connectivity  Inflight Entertainment  Value For Money Recommended  \n",
+       "14                    1.0                     1.0                1          no  \n",
+       "17                    3.0                     3.0                4         yes  \n",
+       "23                    1.0                     1.0                1          no  \n",
+       "34                    5.0                     5.0                4         yes  \n",
+       "39                    3.0                     5.0                1          no  \n",
+       "...                   ...                     ...              ...         ...  \n",
+       "2830                  4.0                     5.0                4         yes  \n",
+       "2838                  5.0                     5.0                3         yes  \n",
+       "2840                  1.0                     1.0                2          no  \n",
+       "2848                  4.0                     5.0                5         yes  \n",
+       "2876                  1.0                     1.0                1          no  \n",
+       "\n",
+       "[321 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "airlines_reviews_df.fillna(0, inplace=True)\n",
+    "airlines_reviews_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "id": "3fb6c231",
    "metadata": {},
    "outputs": [
@@ -1451,7 +1716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "id": "824e9242",
    "metadata": {},
    "outputs": [
@@ -1729,7 +1994,7 @@
        "[1323 rows x 13 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1746,7 +2011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "id": "bce22165",
    "metadata": {
     "scrolled": true
@@ -2001,7 +2266,7 @@
        "[321 rows x 12 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2020,7 +2285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 43,
    "id": "e3596437",
    "metadata": {},
    "outputs": [
@@ -2310,7 +2575,7 @@
        "[267 rows x 14 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2333,7 +2598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "id": "c5b4b190",
    "metadata": {},
    "outputs": [
@@ -2341,17 +2606,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['a320' 'boeing 777-200' 'a380' 'a380 / a320' 'a320neo' 'a321neo' 'a350'\n",
-      " 'boeing 777' 'boeing 777-300' 'a320 finnair' 'boeing 787-9' 'boeing 787'\n",
-      " 'dreamliner' 'boeing 777-300er' 'boeing 787-8' 'a320, a380' 'a350-1000'\n",
-      " 'boeing 787-10' 'a320, boeing 787' 'boeing 777-200er' 'a321' 'boeing 747'\n",
-      " 'boeing 747-400' 'boeing 787-900' 'boeing 737' 'a319 / boeing 789'\n",
-      " 'a321 / boeing 787-9' 'boeing 747 400' 'b747-400' 'boeing 787 dreamliner'\n",
-      " 'a319 / boeing 777' 'a340-300' 'a319' 'boeing 777 / a380'\n",
-      " 'boeing 787-9 / a380-800' 'boeing 767' 'a320 / boeing 787' 'a319/320'\n",
-      " 'boeing 747-400 / a380' 'boeing 777-200 / 747-400'\n",
-      " 'a320 / boeing 777-200' 'boeing 787-800' '787']\n",
-      "And there are 43 unique aircraft types\n"
+      "['A320' 'Boeing 777-200' 'A380' 'A380 / A320' 'A320Neo' 'A321Neo' 'A350'\n",
+      " 'Boeing 777' 'Boeing 777-300' 'A320 Finnair' 'Boeing 787-9' 'Boeing 787'\n",
+      " 'Dreamliner' 'Boeing 777-300ER' 'Boeing 787-8' 'A320, A380' 'A350-1000'\n",
+      " 'Boeing 787-10' 'A320, Boeing 787' 'Boeing 777-200ER' 'A321' 'A321NEO'\n",
+      " 'Boeing 747' 'A320neo' 'Boeing 747-400' 'A321neo' 'Boeing 787-900'\n",
+      " 'Boeing 737' 'A319 / Boeing 789' 'A321 / Boeing 787-9' 'Boeing 747 400'\n",
+      " 'B747-400' 'Boeing 787 Dreamliner' 'A319 / Boeing 777' 'A340-300' 'A319'\n",
+      " 'Boeing 777 / A380' 'Boeing 787-9 / A380-800' 'Boeing 767'\n",
+      " 'A320 / Boeing 787' 'A319/320' 'Boeing 747-400 / A380'\n",
+      " 'Boeing 777-200 / 747-400' 'A320 / Boeing 777-200' 'Boeing\\xa0777'\n",
+      " 'Boeing 787-800' '787']\n",
+      "And there are 47 unique aircraft types\n"
      ]
     }
    ],
@@ -2374,7 +2640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "id": "bdce89ad",
    "metadata": {},
    "outputs": [
@@ -2396,7 +2662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
    "id": "3f27eda0",
    "metadata": {},
    "outputs": [
@@ -2482,7 +2748,7 @@
        "Premium Economy       7   5   4   6   9"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2494,7 +2760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 47,
    "id": "7160f445",
    "metadata": {},
    "outputs": [
@@ -2540,7 +2806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 48,
    "id": "346d017a",
    "metadata": {},
    "outputs": [
@@ -2569,7 +2835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 49,
    "id": "dceb46d8",
    "metadata": {
     "scrolled": false
@@ -2609,7 +2875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 50,
    "id": "e4ccfa5c",
    "metadata": {},
    "outputs": [
@@ -2866,7 +3132,7 @@
        "boeing 787-9            5   0  1   1  2"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2879,8 +3145,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "0f265fd9",
+   "execution_count": 51,
+   "id": "f0ffbb65",
    "metadata": {},
    "outputs": [
     {
@@ -2924,7 +3190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 52,
    "id": "3a0dc849",
    "metadata": {},
    "outputs": [
@@ -3082,7 +3348,7 @@
        "boeing 787-9        5    4"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3103,7 +3369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 53,
    "id": "ce231676",
    "metadata": {},
    "outputs": [
@@ -3311,7 +3577,7 @@
        "boeing 787-9                    5              2            2                0"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3332,7 +3598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 54,
    "id": "9f43cb82",
    "metadata": {},
    "outputs": [],
@@ -3350,7 +3616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 55,
    "id": "f4b91a57",
    "metadata": {},
    "outputs": [
