--- a/Project_3_data_engineering.ipynb
+++ b/Project_3_data_engineering.ipynb
@@ -3364,7 +3364,7 @@
    "id": "e64f092f",
    "metadata": {},
    "source": [
-    "# Airline recommendation based on Seat Types(passenger class)"
+    "# Seat Types(passenger class) with most Passengers based on Airline type"
    ]
   },
   {
